løst de fem fejl

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <title>Vue Template</title>
     <!-- Import Styles -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
-    <div id="appp">
+    <div id="app">
       <div class="nav-bar"></div>
 
       <h1>{{ intro }}</h1>
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Import App -->
-    <script src="./js/index.js"></script>
+    <script src="./js/main.js"></script>
 
     <!-- Mount App -->
     <script>
